Updated docker files, requirements. Added tokens list
